--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
   <title>Download</title>
 </head>
 <body>
-  <h2>Benvenuto! Scarica il file qui sotto:</h2>
-  <a href="file/Video Luana1.mp4" download>Clicca per scaricare il file</a>
+  <h2>Complimenti! Hai sbloccato il primo Luana Suca!:</h2>
+  <a href="file/Video Luana1.mp4" download>Clicca qui per scaricarlo</a>
 </body>
 </html>
