--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       if (user === "Luanasuca1" && pass === "pipistrello") {
         window.location.href = "download.html";
       } else {
-        document.getElementById("message").innerText = "Accesso negato!";
+        document.getElementById("message").innerText = "Ma non ci conosci proprio! Ritenta và!";
       }
     }
   </script>
